# sequence

./: .gitignore  CMakeLists.txt  README.md  dump.txt
docs/: benchmarks.csv  future.md  setup.md  specification.md  tutorial.md
include/: sequence.hpp  sequence_fwd.hpp
include/sequences/: base_sequence.hpp  concat_sequence.hpp  deduce_param.hpp  empty_sequence.hpp  fwd.hpp  generated_sequence.hpp  helpers.hpp  int_iterator.hpp  iterator_sequence.hpp  merge_sequence.hpp  output_sequence.hpp  pointer_sequence.hpp  repeat_sequence.hpp  select_sequence.hpp  sequence.hpp  sequence_ref.hpp  singleton_sequence.hpp  skip_sequence.hpp  skip_until_sequence.hpp  split_sequence.hpp  stored_array_sequence.hpp  stored_sequence.hpp  take_sequence.hpp  take_while_sequence.hpp  virtual_sequence.hpp  where_sequence.hpp
samples/: creation.cpp  csvreader.cpp  example1.cpp  example2.cpp  functions.cpp  functions.hpp  operations.cpp  primes.cpp  templates.cpp  transformations.cpp  writers.cpp
test/: CMakeLists.txt  benchmarks.cpp  test1.txt  test_sequence.cpp
